added ratio to profile page

--- a/streisand/profiles/templates/profile.html
+++ b/streisand/profiles/templates/profile.html
@@ -10,11 +10,13 @@
     <ul>
       <li>Uploaded: {{ profile.bytes_uploaded }}</li>
       <li>Downloaded: {{ profile.bytes_downloaded }}</li>
-      <li>Torrents:</li>
-      <ul>
-        {% for ts in profile.torrent_stats.all %}
-          <li><a href="{{ ts.torrent.get_absolute_url }}">Torrent {{ ts.torrent.id }}</a> ({{ ts.bytes_uploaded }} / {{ ts.bytes_downloaded }})</li>
-        {% endfor %}
-      </ul>
+      <li>Ratio: {{ profile.ratio }}</li>
+      <li>Torrents:
+        <ul>
+          {% for ts in profile.torrent_stats.all %}
+            <li><a href="{{ ts.torrent.get_absolute_url }}">Torrent {{ ts.torrent.id }}</a> ({{ ts.bytes_uploaded }} / {{ ts.bytes_downloaded }})</li>
+          {% endfor %}
+        </ul>
+      </li>
     </ul>
 {% endblock %}
