--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -37,7 +37,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/torrents/">Torrents</a></li>
+            <li><a href="/films/">Films</a></li>
+              <li><a href="/film-lists/">Lists</a></li>
             <li><a href="/profiles/">Profiles</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
