--- a/streisand/www/templates/home.html
+++ b/streisand/www/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Job Details | Bellhops{% endblock %}
+{% block title %}Streisand{% endblock %}
 
 {% block main %}
       <div class="page-header">
