--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -38,8 +38,10 @@
           <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
             <li><a href="/films/">Films</a></li>
-              <li><a href="/film-lists/">Lists</a></li>
-            <li><a href="/profiles/">Profiles</a></li>
+            <li><a href="/film-lists/">Lists</a></li>
+            {% if request.user.profile %}
+            <li><a href="/profile/">Profile ({{ request.user.profile.ratio }})</a></li>
+            {% endif %}
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
