--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -41,6 +41,7 @@
             <li><a href="/film-lists/">Lists</a></li>
             {% if request.user.profile %}
             <li><a href="/profile/">Profile ({{ request.user.profile.ratio }})</a></li>
+            <li><a href="/logout/">Log out</a></li>
             {% endif %}
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
