--- a/streisand/films/templates/film_details.html
+++ b/streisand/films/templates/film_details.html
@@ -9,7 +9,7 @@
 
     <ul>
       {% for torrent in film.torrents.all %}
-        <li><a name="torrent-{{ torrent.id }}" href="{{ torrent.get_absolute_url }}">{{ torrent }}</a></li>
+        <li><a name="torrent-{{ torrent.id }}" href="{{ torrent.get_absolute_url }}">{{ torrent }}</a>{% if torrent.id == torrent_id %} *{% endif %}</li>
       {% endfor %}
     </ul>
 {% endblock %}
