--- a/streisand/torrents/templates/torrent_details.html
+++ b/streisand/torrents/templates/torrent_details.html
@@ -4,9 +4,18 @@
 
 {% block main %}
     <div class="page-header">
-      <h1>Torrent {{ torrent.id }} ({{ torrent.size }})</h1>
+      <h1>Torrent {{ torrent.id }} ({{ torrent.size_in_bytes }})</h1>
     </div>
 
+    <p>info_hash: {{ torrent.info_hash }}</p>
+    <p>Files:</p>
+    <ul>
+      {% for f in torrent.file_list %}
+        <li>{{ f }}</li>
+      {% endfor %}
+    </ul>
+
+    <p>Users:</p>
     <ul>
       {% for p in torrent.profiles.all %}
         <li><a href="{{ p.get_absolute_url }}">{{ p.username }}</a></li>
