--- a/streisand/films/templates/film_details.html
+++ b/streisand/films/templates/film_details.html
@@ -5,6 +5,7 @@
 {% block main %}
     <div class="page-header">
       <h1>{{ film.title }}</h1>
+      <img src="{{ film.poster_url }}" width="250px" />
     </div>
 
     <ul>
