--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -22,54 +22,53 @@
 </head>
 
 <body style="padding-top: 50px;">
-    {% block navbar %}
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Streisand</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="/">Home</a></li>
-            <li><a href="{% url 'film_index' %}">Films</a></li>
-            <li><a href="{% url 'film_list_index' %}">Lists</a></li>
-            <li><a href="{% url 'torrent_request_index' %}">Torrent Requests</a></li>
-            {% if request.user.profile %}
-            <li><a href="{% url 'user_profile' profile_id=request.user.profile.id %}">Profile ({{ request.user.profile.ratio }})</a></li>
-            <li><a href="{% url 'logout' %}">Log out</a></li>
-            {% endif %}
+{% block navbar %}
+  <!-- Fixed navbar -->
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">Streisand</a>
+      </div>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="{% url 'film_index' %}">Films</a></li>
+          <li><a href="{% url 'film_list_index' %}">Lists</a></li>
+          <li><a href="{% url 'torrent_request_index' %}">Torrent Requests</a></li>
+          {% if request.user.profile %}
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ request.user.username }} ({{ request.user.profile.ratio }}) <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href="{% url 'user_profile' profile_id=request.user.profile.id %}">Profile</a></li>
+                <li><a href="{% url 'invite_index' %}">Invite ({# request.user.profile.invite_count #})</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
                 <li><a href="#">Separated link</a></li>
                 <li><a href="#">One more separated link</a></li>
+                <li class="divider"></li>
+                <li><a href="{% url 'logout' %}">Log out</a></li>
               </ul>
             </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+          {% endif %}
+        </ul>
+      </div><!--/.nav-collapse -->
     </div>
-    {% endblock %}
+  </div>
+{% endblock %}
 
-    <div class="container theme-showcase" role="main">
-    {% block main %}
-    {% endblock %}
-    </div>
+<div class="container theme-showcase" role="main">
+  {% block main %}
+  {% endblock %}
+</div>
 
-  <!-- jQuery and Bootstrap 3.2.0 JS -->
-  <script src="{% static 'www/jquery.min.js' %}"></script>
-  <script src="{% static 'www/bootstrap.min.js' %}"></script>
+<!-- jQuery and Bootstrap 3.2.0 JS -->
+<script src="{% static 'www/jquery.min.js' %}"></script>
+<script src="{% static 'www/bootstrap.min.js' %}"></script>
 </body>
 </html>
