--- a/streisand/films/templates/film_index.html
+++ b/streisand/films/templates/film_index.html
@@ -17,4 +17,20 @@
         </ul>
       {% endfor %}
     </ul>
+
+    <div class="pagination">
+      <span class="step-links">
+        {% if films.has_previous %}
+          <a href="?page={{ films.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+          Page {{ films.number }} of {{ films.paginator.num_pages }}.
+        </span>
+
+        {% if films.has_next %}
+          <a href="?page={{ films.next_page_number }}">next</a>
+        {% endif %}
+      </span>
+    </div>
 {% endblock %}
