--- a/streisand/torrents/templates/torrent_upload.html
+++ b/streisand/torrents/templates/torrent_upload.html
@@ -7,9 +7,13 @@
       <h1>Torrent Upload</h1>
     </div>
 
-    <form action="{% url 'torrent_upload' %}" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <p><input type="submit" value="Upload" /></p>
-    </form>
+    {% if 'torrents.can_upload' not in perms %}
+        <h2>You do not have torrent upload privileges.</h2>
+    {% else %}
+        <form action="{% url 'torrent_upload' %}" method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <p><input type="submit" value="Upload" /></p>
+        </form>
+    {% endif %}
 {% endblock %}
