access profiles by username in the url instead of id

--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -45,7 +45,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ request.user.username }} ({{ request.user.profile.ratio }}) <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'user_profile' profile_id=request.user.profile.id %}">Profile</a></li>
+                <li><a href="{% url 'user_profile' username=request.user.username %}">Profile</a></li>
                 <li><a href="{% url 'invite_index' %}">Invite ({# request.user.profile.invite_count #})</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Nav header</li>
