--- a/streisand/films/templates/film_details.html
+++ b/streisand/films/templates/film_details.html
@@ -35,7 +35,10 @@
               <li>{{ file }}</li>
             {% endfor %}
           </ul>
-          <pre>{{ torrent.description }}</pre>
+          <pre>{{ torrent.nfo }}</pre>
+          {% if torrent.description %}
+            <div class="well">{{ torrent.description }}</div>
+          {% endif %}
         </span>
       {% endfor %}
       </div>
