--- a/streisand/torrent_requests/templates/torrent_request_details.html
+++ b/streisand/torrent_requests/templates/torrent_request_details.html
@@ -1,11 +1,42 @@
 {% extends 'base.html' %}
 
+{% load humanize %}
+
 {% block title %}Requests - {{ torrent_request.film.title }}{% endblock %}
 
 {% block main %}
     <div class="page-header">
-      <h1>{{ torrent_request.film.title }}</h1>
+      <h1>{{ torrent_request.film_title }} ({{ torrent_request.film_year }})</h1>
+      <h2>Total Bounty: {{ torrent_request.total_bounty_in_bytes|filesizeformat }}</h2>
     </div>
 
     <p>{{ torrent_request.description }}</p>
+
+    <h2>Votes</h2>
+    {% for vote in torrent_request.votes.all %}
+        <p>{{ vote.author }} - {{ vote.bounty_in_bytes|filesizeformat }}</p>
+    {% endfor %}
+
+    {% if 'torrent_requests.can_vote' in perms %}
+        <form method="post">
+            {% csrf_token %}
+            {{ vote_form.as_p }}
+            <p><input type="submit" value="Vote" /></p>
+        </form>
+    {% endif %}
+
+    <h2>Comments</h2>
+    <div class="col-sm-8">
+      <div class="list-group">
+        {% for comment in torrent_request.comments.all %}
+          <div class="list-group-item">
+            <h4 class="list-group-item-heading">
+              <a href="{{ comment.author.get_absolute_url }}">{{ comment.author.username }}</a>
+              <span title="{{ comment.created_at }}">{{ comment.created_at|naturaltime }}</span>
+            </h4>
+            <p class="list-group-item-text">{{ comment.text }}</p>
+          </div>
+        {% endfor %}
+      </div>
+    </div>
 {% endblock %}
