--- a/streisand/invites/templates/invite_index.html
+++ b/streisand/invites/templates/invite_index.html
@@ -8,7 +8,7 @@
     </div>
 
     <h2>Send an invite</h2>
-    <form action="." method="post" enctype="multipart/form-data">
+    <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <p><input type="submit" value="Invite" /></p>
