--- a/streisand/www/templates/register.html
+++ b/streisand/www/templates/register.html
@@ -7,7 +7,7 @@
       <h1>Register a New Account</h1>
     </div>
 
-    <form method="post" enctype="multipart/form-data">
+    <form method="post">
         {% csrf_token %}
 
         <p>{{ form.non_field_errors }}</p>
