--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -37,6 +37,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
+          <li><a href="{% url 'user_profile_index' %}">Users</a></li>
           <li><a href="{% url 'film_index' %}">Films</a></li>
           <li><a href="{% url 'film_list_index' %}">Lists</a></li>
           <li><a href="{% url 'torrent_request_index' %}">Torrent Requests</a></li>
