--- a/streisand/films/templates/film_details.html
+++ b/streisand/films/templates/film_details.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanize %}
+{% load humanize timestamp_formatting %}
 
 {% block title %}{{ film }}{% endblock %}
 
@@ -23,60 +23,7 @@
     <h2>Torrents</h2>
     <div class="list-group">
       {% for torrent in film.torrents.all %}
-        <span class="list-group-item{% if torrent.id == torrent_id %} active{% endif %}">
-          <h4 class="list-group-item-heading">
-            {{ torrent.codec }}
-            /
-            {{ torrent.container }}
-            /
-            {{ torrent.resolution }}
-            /
-            {{ torrent.source_media }} ({{ torrent.size_in_bytes|filesizeformat }})
-          </h4>
-          <div class="well">
-            uploaded
-            {% if torrent.uploaded_by %}
-              by <a href="{{ torrent.uploaded_by.get_absolute_url }}">{{ torrent.uploaded_by.username }}</a>
-            {% endif %}
-            <span title="{{ torrent.uploaded_at }}">{{ torrent.uploaded_at|naturaltime }}</span>
-            <br />
-            {% if torrent.is_approved == True %}
-              approved by {{ torrent.moderated_by }}
-            {% elif torrent.is_approved == False %}
-              work in progress
-            {% else %}
-              not yet moderated
-            {% endif %}
-            {% if not torrent.is_approved %}
-            <br />
-            <form action="{% url 'torrent_moderation' torrent_id=torrent.id %}" method="post">
-              {% csrf_token %}
-              <input type="hidden" name="moderation_status" value="approved" />
-              <input type="submit" value="Approve" />
-            </form>
-            {% endif %}
-          </div>
-          | <a name="torrent-pl-{{ torrent.id }}" href="{{ torrent.get_absolute_url }}">PL</a>
-          | <a name="torrent-dl-{{ torrent.id }}" href="{% url 'torrent_download' torrent_id=torrent.id announce_key=user.profile.announce_key_id %}">DL</a>
-          {% if torrent.is_accepting_reseed_requests and 'torrents.can_request_reseed' in perms %}
-          | <a name="torrent-rr-{{ torrent.id }}" href="{% url 'reseed_request' torrent_id=torrent.id %}">RR</a>
-          {% endif %}
-          | {{ torrent.release_name }}<br/>
-          {% if torrent.reseed_request %}
-          Reseed requested <span title="{{ torrent.reseed_request.created_at }}">{{ torrent.reseed_request.created_at|naturaltime }}</span>
-          {% endif %}
-          <ul>
-            {% for file in torrent.file_list %}
-              <li>{{ file }}</li>
-            {% endfor %}
-          </ul>
-          {% if torrent.nfo %}
-            <pre>{{ torrent.nfo }}</pre>
-          {% endif %}
-          {% if torrent.description %}
-            <div class="well">{{ torrent.description }}</div>
-          {% endif %}
-        </span>
+        {% include 'fragments/torrent_details.html' %}
       {% endfor %}
       </div>
 
@@ -87,7 +34,7 @@
           <div class="list-group-item">
             <h4 class="list-group-item-heading">
               <a href="{{ comment.author.get_absolute_url }}">{{ comment.author.username }}</a>
-              <span title="{{ comment.created_at }}">{{ comment.created_at|naturaltime }}</span>
+              {{ comment.created_at|timestamp }}
             </h4>
             <p class="list-group-item-text">{{ comment.text }}</p>
           </div>
