--- a/streisand/profiles/templates/user_profile_index.html
+++ b/streisand/profiles/templates/user_profile_index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load pagination %}
 
 {% block title %}User Profiles{% endblock %}
 
@@ -12,4 +13,6 @@
         <li><a href="{{ p.get_absolute_url }}">{{ p.username }}</a></li>
       {% endfor %}
     </ul>
+
+    {% pagination profiles %}
 {% endblock %}
