--- a/streisand/torrent_requests/templates/torrent_request_index.html
+++ b/streisand/torrent_requests/templates/torrent_request_index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load humanize %}
+{% load timestamp_formatting pagination %}
 
 {% block title %}Requests{% endblock %}
 
@@ -15,9 +15,9 @@
         <tr>
           <th>Request</th>
           <th>Format</th>
-          <th><a href="{% url 'torrent_request_index' %}?order_by=bounty">Bounty</a></th>
+          <th><a href="?order_by=bounty">Bounty</a></th>
           <th>Author</th>
-          <th><a href="{% url 'torrent_request_index' %}?order_by=created_at">Created</a></th>
+          <th><a href="?order_by=created_at">Created</a></th>
         </tr>
       </thead>
       {% for torrent_request in torrent_requests %}
@@ -26,8 +26,10 @@
           <td>{{ torrent_request.format }}</td>
           <td>{{ torrent_request.total_bounty_in_bytes|filesizeformat }}</td>
           <td><a href="{{ torrent_request.created_by.get_absolute_url }}">{{ torrent_request.created_by }}</a></td>
-          <td><span title="{{ torrent_request.created_at }}">{{ torrent_request.created_at|naturaltime }}</span></td>
+          <td>{{ torrent_request.created_at|timestamp }}</td>
         </tr>
       {% endfor %}
     </table>
+
+    {% pagination torrent_requests %}
 {% endblock %}
