--- a/streisand/www/templates/base.html
+++ b/streisand/www/templates/base.html
@@ -1,5 +1,4 @@
 {% load sekizai_tags %}
-{% load static from staticfiles %}
 <!doctype html>
 
 <html lang="en">
@@ -12,8 +11,8 @@
 
   <!-- Bootstrap 3.2.0 CSS -->
   {% block css %}
-  <link rel="stylesheet" href="{% static 'www/bootstrap.min.css' %}">
-  <link rel="stylesheet" href="{% static 'www/bootstrap-theme.min.css' %}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   {% endblock %}
   <!-- django-wiki CSS via sekizai -->
   {% render_block 'css' %}
@@ -21,8 +20,8 @@
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-    <script src="{% static 'www/html5shiv.min.js' %}"></script>
-    <script src="{% static 'www/respond.min.js' %}"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
 
@@ -74,8 +73,8 @@
 </div>
 
 <!-- jQuery and Bootstrap 3.2.0 JS -->
-<script src="{% static 'www/jquery.min.js' %}"></script>
-<script src="{% static 'www/bootstrap.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!-- django-wiki js via sekizai -->
 {% render_block 'js' %}
 
