--- a/streisand/films/templates/film_details.html
+++ b/streisand/films/templates/film_details.html
@@ -22,7 +22,7 @@
 
     <h2>Torrents</h2>
     <div class="list-group">
-      {% for torrent in film.torrents.all %}
+      {% for torrent in torrents %}
         {% include 'fragments/torrent_details.html' %}
       {% endfor %}
       </div>
@@ -30,7 +30,7 @@
     <h2>Comments</h2>
     <div class="col-sm-8">
       <div class="list-group">
-        {% for comment in film.comments.all %}
+        {% for comment in comments %}
           <div class="list-group-item">
             <h4 class="list-group-item-heading">
               <a href="{{ comment.author.get_absolute_url }}">{{ comment.author.username }}</a>
